Fix saves screen for now.